[package]
name = "dev"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
nucleo = "0.2"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
env_logger = "0.11.8"
rayon = "1.10.0"
thread_local = "1.1.8"
bitcode = { version = "0.6.6", features = ["serde"] }
regex = "1.11.1"
html2md = "0.2.15"

[dev-dependencies]
tokio-test = "0.4"
